chore: small changes (#94)
