# internal/infrastructure/api/rest/gen.go
@@ -68,8 +68,8 @@ type ErrorResponse struct {
 	Detail string   `json:"detail"`
 	Errors *[]Error `json:"errors,omitempty"`
 
-	// Instance A URI reference that identifies the specific occurrence of the problem.
-	Instance string `json:"instance"`
+	// RequestId The request identifier.
+	RequestId string `json:"requestId"`
 
 	// Status The HTTP status code generated by the origin server for this occurrence of the problem.
 	Status int32 `json:"status"`
