# resources/openapi.yml
@@ -199,7 +199,7 @@ components:
         - title
         - detail
         - status
-        - instance
+        - requestId
       properties:
         type:
           type: string
@@ -217,10 +217,9 @@ components:
           description: The HTTP status code generated by the origin server for this occurrence of the problem.
           minimum: 100
           maximum: 599
-        instance:
+        requestId:
           type: string
-          format: uri
-          description: A URI reference that identifies the specific occurrence of the problem.
+          description: The request identifier.
         errors:
           type: array
           items:
